my module 1 exercises

--- a/module1/exercises/SQL.ipynb
+++ b/module1/exercises/SQL.ipynb
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,9 +313,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Connected: dsa_ro_user@dsa_ro'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%sql postgres://dsa_ro_user:readonly@pgsql.dsa.lan/dsa_ro"
    ]
@@ -330,15 +341,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgres://dsa_ro_user:***@pgsql.dsa.lan/dsa_ro\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>id</th>\n",
+       "        <th>personal</th>\n",
+       "        <th>family</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>lake</td>\n",
+       "        <td>Anderson</td>\n",
+       "        <td>Lake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>danforth</td>\n",
+       "        <td>Frank</td>\n",
+       "        <td>Danforth</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('lake', 'Anderson', 'Lake'), ('danforth', 'Frank', 'Danforth')]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "SELECT * \n",
+    "FROM person \n",
+    "WHERE id LIKE '%a%';\n"
    ]
   },
   {
@@ -351,12 +399,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgres://dsa_ro_user:***@pgsql.dsa.lan/dsa_ro\n",
+      "8 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>taken</th>\n",
+       "        <th>person</th>\n",
+       "        <th>quant</th>\n",
+       "        <th>reading</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>734</td>\n",
+       "        <td>pb</td>\n",
+       "        <td>rad</td>\n",
+       "        <td>8.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>734</td>\n",
+       "        <td>pb</td>\n",
+       "        <td>temp</td>\n",
+       "        <td>-21.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>735</td>\n",
+       "        <td>pb</td>\n",
+       "        <td>rad</td>\n",
+       "        <td>7.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>751</td>\n",
+       "        <td>pb</td>\n",
+       "        <td>rad</td>\n",
+       "        <td>4.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>751</td>\n",
+       "        <td>pb</td>\n",
+       "        <td>temp</td>\n",
+       "        <td>-18.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>752</td>\n",
+       "        <td>lake</td>\n",
+       "        <td>rad</td>\n",
+       "        <td>2.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>752</td>\n",
+       "        <td>lake</td>\n",
+       "        <td>temp</td>\n",
+       "        <td>-16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>837</td>\n",
+       "        <td>lake</td>\n",
+       "        <td>rad</td>\n",
+       "        <td>1.46</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(734, 'pb', 'rad', 8.41),\n",
+       " (734, 'pb', 'temp', -21.5),\n",
+       " (735, 'pb', 'rad', 7.22),\n",
+       " (751, 'pb', 'rad', 4.35),\n",
+       " (751, 'pb', 'temp', -18.5),\n",
+       " (752, 'lake', 'rad', 2.19),\n",
+       " (752, 'lake', 'temp', -16.0),\n",
+       " (837, 'lake', 'rad', 1.46)]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql \n",
-    "\n",
+    "SELECT * \n",
+    "FROM survey \n",
+    "WHERE quant IN ('rad','temp') \n",
+    "AND (person = 'pb' OR person='lake');\n",
     "\n",
     "\n",
     "\n"
@@ -373,11 +508,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgres://dsa_ro_user:***@pgsql.dsa.lan/dsa_ro\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>person</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>lake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>pb</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('lake',), ('pb',)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql \n",
+    "SELECT distinct person \n",
+    "FROM survey \n",
+    "WHERE quant = 'temp' \n",
+    "AND person IS NOT NULL;\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -394,11 +566,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgres://dsa_ro_user:***@pgsql.dsa.lan/dsa_ro\n",
+      "8 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>taken</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>837</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>734</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>751</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>622</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>735</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>619</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(837,), (734,), (751,), (622,), (844,), (752,), (735,), (619,)]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql\n",
+    "SELECT DISTINCT taken \n",
+    "FROM survey;\n",
     "\n",
     "\n",
     "\n"
@@ -415,12 +639,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgres://dsa_ro_user:***@pgsql.dsa.lan/dsa_ro\n",
+      "5 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>id</th>\n",
+       "        <th>personal</th>\n",
+       "        <th>family</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>danforth</td>\n",
+       "        <td>Frank</td>\n",
+       "        <td>Danforth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>dyer</td>\n",
+       "        <td>William</td>\n",
+       "        <td>Dyer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>lake</td>\n",
+       "        <td>Anderson</td>\n",
+       "        <td>Lake</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>pb</td>\n",
+       "        <td>Frank</td>\n",
+       "        <td>Pabodie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>roe</td>\n",
+       "        <td>Valentina</td>\n",
+       "        <td>Roerich</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('danforth', 'Frank', 'Danforth'),\n",
+       " ('dyer', 'William', 'Dyer'),\n",
+       " ('lake', 'Anderson', 'Lake'),\n",
+       " ('pb', 'Frank', 'Pabodie'),\n",
+       " ('roe', 'Valentina', 'Roerich')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql \n",
-    "\n",
+    "SELECT * \n",
+    "FROM person \n",
+    "ORDER BY family;\n",
     "\n",
     "\n",
     "\n"
@@ -436,12 +719,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgres://dsa_ro_user:***@pgsql.dsa.lan/dsa_ro\n",
+      "4 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>reading</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>-16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>-18.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>-21.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>-26.0</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(-16.0,), (-18.5,), (-21.5,), (-26.0,)]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql \n",
-    "\n",
+    "SELECT reading \n",
+    "FROM survey \n",
+    "WHERE quant = 'temp' \n",
+    "ORDER BY reading DESC;\n",
     "\n",
     "\n",
     "\n"
@@ -458,11 +782,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgres://dsa_ro_user:***@pgsql.dsa.lan/dsa_ro\n",
+      "2 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>id</th>\n",
+       "        <th>personal</th>\n",
+       "        <th>family</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>dyer</td>\n",
+       "        <td>William</td>\n",
+       "        <td>Dyer</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>pb</td>\n",
+       "        <td>Frank</td>\n",
+       "        <td>Pabodie</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('dyer', 'William', 'Dyer'), ('pb', 'Frank', 'Pabodie')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql \n",
+    "SELECT * \n",
+    "FROM person \n",
+    "LIMIT 2;\n",
     "\n",
     "\n",
     "\n",
@@ -479,12 +844,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgres://dsa_ro_user:***@pgsql.dsa.lan/dsa_ro\n",
+      "3 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>taken</th>\n",
+       "        <th>person</th>\n",
+       "        <th>quant</th>\n",
+       "        <th>reading</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>619</td>\n",
+       "        <td>dyer</td>\n",
+       "        <td>rad</td>\n",
+       "        <td>9.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>622</td>\n",
+       "        <td>dyer</td>\n",
+       "        <td>rad</td>\n",
+       "        <td>7.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>734</td>\n",
+       "        <td>pb</td>\n",
+       "        <td>rad</td>\n",
+       "        <td>8.41</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(619, 'dyer', 'rad', 9.82),\n",
+       " (622, 'dyer', 'rad', 7.8),\n",
+       " (734, 'pb', 'rad', 8.41)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql \n",
-    "\n",
+    "SELECT * \n",
+    "FROM survey \n",
+    "WHERE quant = 'rad' \n",
+    "LIMIT 3;\n",
     "\n",
     "\n",
     "\n"
@@ -501,15 +918,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgres://dsa_ro_user:***@pgsql.dsa.lan/dsa_ro\n",
+      "3 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>taken</th>\n",
+       "        <th>person</th>\n",
+       "        <th>quant</th>\n",
+       "        <th>reading</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>752</td>\n",
+       "        <td>lake</td>\n",
+       "        <td>temp</td>\n",
+       "        <td>-16.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>751</td>\n",
+       "        <td>pb</td>\n",
+       "        <td>temp</td>\n",
+       "        <td>-18.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>734</td>\n",
+       "        <td>pb</td>\n",
+       "        <td>temp</td>\n",
+       "        <td>-21.5</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(752, 'lake', 'temp', -16.0),\n",
+       " (751, 'pb', 'temp', -18.5),\n",
+       " (734, 'pb', 'temp', -21.5)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql \n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "SELECT * \n",
+    "FROM survey \n",
+    "WHERE quant = 'temp' \n",
+    "ORDER BY reading \n",
+    "DESC LIMIT 3;\n"
    ]
   },
   {
@@ -522,14 +989,135 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgres://dsa_ro_user:***@pgsql.dsa.lan/dsa_ro\n",
+      "13 rows affected.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>taken</th>\n",
+       "        <th>person</th>\n",
+       "        <th>quant</th>\n",
+       "        <th>reading</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>734</td>\n",
+       "        <td>lake</td>\n",
+       "        <td>sal</td>\n",
+       "        <td>0.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>752</td>\n",
+       "        <td>lake</td>\n",
+       "        <td>sal</td>\n",
+       "        <td>0.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>622</td>\n",
+       "        <td>dyer</td>\n",
+       "        <td>sal</td>\n",
+       "        <td>0.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>751</td>\n",
+       "        <td>lake</td>\n",
+       "        <td>sal</td>\n",
+       "        <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>619</td>\n",
+       "        <td>dyer</td>\n",
+       "        <td>sal</td>\n",
+       "        <td>0.13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>837</td>\n",
+       "        <td>lake</td>\n",
+       "        <td>sal</td>\n",
+       "        <td>0.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>837</td>\n",
+       "        <td>lake</td>\n",
+       "        <td>rad</td>\n",
+       "        <td>1.46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>752</td>\n",
+       "        <td>lake</td>\n",
+       "        <td>rad</td>\n",
+       "        <td>2.19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>622</td>\n",
+       "        <td>dyer</td>\n",
+       "        <td>rad</td>\n",
+       "        <td>7.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>619</td>\n",
+       "        <td>dyer</td>\n",
+       "        <td>rad</td>\n",
+       "        <td>9.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>844</td>\n",
+       "        <td>roe</td>\n",
+       "        <td>rad</td>\n",
+       "        <td>11.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>837</td>\n",
+       "        <td>roe</td>\n",
+       "        <td>sal</td>\n",
+       "        <td>22.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>752</td>\n",
+       "        <td>roe</td>\n",
+       "        <td>sal</td>\n",
+       "        <td>41.6</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[(734, 'lake', 'sal', 0.05),\n",
+       " (752, 'lake', 'sal', 0.09),\n",
+       " (622, 'dyer', 'sal', 0.09),\n",
+       " (751, 'lake', 'sal', 0.1),\n",
+       " (619, 'dyer', 'sal', 0.13),\n",
+       " (837, 'lake', 'sal', 0.21),\n",
+       " (837, 'lake', 'rad', 1.46),\n",
+       " (752, 'lake', 'rad', 2.19),\n",
+       " (622, 'dyer', 'rad', 7.8),\n",
+       " (619, 'dyer', 'rad', 9.82),\n",
+       " (844, 'roe', 'rad', 11.25),\n",
+       " (837, 'roe', 'sal', 22.5),\n",
+       " (752, 'roe', 'sal', 41.6)]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "%%sql \n",
-    "\n",
-    "\n",
-    "\n"
+    "SELECT * \n",
+    "FROM survey \n",
+    "WHERE person like '%e%' \n",
+    "AND reading > 0 \n",
+    "ORDER BY reading;\n"
    ]
   },
   {
