--- a/module2/practices/DB_Design_Practice.ipynb
+++ b/module2/practices/DB_Design_Practice.ipynb
@@ -52,7 +52,21 @@
     "# List your entities ideas below:\n",
     "# -------------------------------\n",
     "\n",
+    "INDIVIDUAL,\n",
     "\n",
+    "TASK_TRACKING,\n",
+    "\n",
+    "TASK\n",
+    "\n",
+    "PACKING\n",
+    "\n",
+    "PACKAGE\n",
+    "\n",
+    "PACKING_LIST\n",
+    "\n",
+    "PACKING_TASK\n",
+    "\n",
+    "INVENTORY\n",
     "\n",
     "\n",
     "\n",
@@ -115,6 +129,52 @@
     "# -------------------------------\n",
     "\n",
     "\n",
+    "INDIVIDUAL\n",
+    "\tindividualid\n",
+    "\tfirstname\n",
+    "\tlastname\n",
+    "\taddress_line_1\n",
+    "\taddress_line_2\n",
+    "\tcity\n",
+    "\tstate\n",
+    "\tzip\n",
+    "\n",
+    "TASK_TRACKING\n",
+    "\tindividualid\n",
+    "\ttaskid\n",
+    "\tstarttime\n",
+    "\tendtime\n",
+    "\t\n",
+    "TASK\n",
+    "\ttaskid\n",
+    "\ttaskdescription\n",
+    "\ttasktype\n",
+    "\ttaskstatus\n",
+    "\t\n",
+    "PACKING\n",
+    "\tpackingid\n",
+    "\tpackingname\n",
+    "\tpackingdescription\n",
+    "\n",
+    "PACKAGE\n",
+    "\tpackageid\n",
+    "\tdatecreated\n",
+    "\ttotalwt\n",
+    "\ttaskid\n",
+    "\n",
+    "PACKING_LIST\n",
+    "\tpackageid\n",
+    "\titemid\n",
+    "\titemquant\n",
+    "\n",
+    "PACKING_TASK\n",
+    "\tpackingid\n",
+    "\ttaskid\n",
+    "\t\n",
+    "INVENTORY\n",
+    "\titemid\n",
+    "\titemdesc\n",
+    "\titemvalue\n",
     "\n"
    ]
   },
