--- a/module2/practices/ERD2DDL.ipynb
+++ b/module2/practices/ERD2DDL.ipynb
@@ -114,23 +114,23 @@
    "metadata": {},
    "source": [
     "\n",
-    "CREATE TABLE SSO.Student (\n",
+    "CREATE TABLE may96c.Student (\n",
     "    StudentID INT NOT NULL,\n",
-    "    LastName VARHCAR(50) NOT NULL,\n",
+    "    LastName VARCHAR(50) NOT NULL,\n",
     "    FirstName VARCHAR(50) NOT NULL,\n",
     "    PRIMARY KEY (StudentID)\n",
     ");\n",
     "\n",
-    "CREATE TABLE SSO.Instructor (\n",
+    "CREATE TABLE may96c.Instructor (\n",
     "    InstructorID INT NOT NULL,\n",
-    "    LastName VARHCAR(50) NOT NULL,\n",
+    "    LastName VARCHAR(50) NOT NULL,\n",
     "    FirstName VARCHAR(50) NOT NULL,\n",
     "    PRIMARY KEY (InstructorID)\n",
     ");\n",
     "\n",
-    "CREATE TABLE SSO.Course (\n",
+    "CREATE TABLE may96c.Course (\n",
     "    Number CHAR(8) NOT NULL,\n",
-    "    Title VARHCAR(100) NOT NULL,\n",
+    "    Title VARCHAR(100) NOT NULL,\n",
     "    Synopsis TEXT NOT NULL,\n",
     "    PRIMARY KEY (Number)\n",
     ");"
@@ -148,7 +148,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "CREATE TABLE SSO.Class (\n",
+    "CREATE TABLE may96c.Class (\n",
     "    ClassID INT NOT NULL,\n",
     "    Number CHAR(8) NOT NULL,\n",
     "    InstructorID INT NOT NULL,\n",
@@ -156,12 +156,12 @@
     "    DateEnded DATE,\n",
     "    PRIMARY KEY (ClassID),\n",
     "    FOREIGN KEY (Number)\n",
-    "      REFERENCES Course(Number)\n",
+    "      REFERENCES Course(Number),\n",
     "    FOREIGN KEY (InstructorID)\n",
     "      REFERENCES Instructor(InstructorID)\n",
     ");\n",
     "\n",
-    "CREATE TABLE SSO.Enrollment (\n",
+    "CREATE TABLE may96c.Enrollment (\n",
     "    ClassID INT NOT NULL,\n",
     "    StudentID INT NOT NULL,\n",
     "    PRIMARY KEY (ClassID,StudentID),\n",
@@ -189,7 +189,17 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
+    "CREATE TABLE may96c.CourseGrade (\n",
+    "    ClassID INT NOT NULL,\n",
+    "    StudentID INT NOT NULL,\n",
+    "    GradeReceived INT NOT NULL,\n",
+    "    PRIMARY KEY (ClassID,StudentID),\n",
+    "    FOREIGN KEY (ClassID)\n",
+    "      REFERENCES Class(ClassID),\n",
+    "    FOREIGN KEY (StudentID)\n",
+    "      REFERENCES Student(StudentID)\n",
     "\n",
+    ");\n",
     "\n",
     "\n",
     "\n",
@@ -207,7 +217,17 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "\n",
+    "                Table \"may96c.coursegrade\"\n",
+    "    Column     |  Type   | Collation | Nullable | Default\n",
+    "---------------+---------+-----------+----------+---------\n",
+    " classid       | integer |           | not null |\n",
+    " studentid     | integer |           | not null |\n",
+    " gradereceived | integer |           | not null |\n",
+    "Indexes:\n",
+    "    \"coursegrade_pkey\" PRIMARY KEY, btree (classid, studentid)\n",
+    "Foreign-key constraints:\n",
+    "    \"coursegrade_classid_fkey\" FOREIGN KEY (classid) REFERENCES class(classid)\n",
+    "    \"coursegrade_studentid_fkey\" FOREIGN KEY (studentid) REFERENCES student(studentid)\n",
     "\n",
     "\n"
    ]
@@ -226,6 +246,16 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
+    "CREATE TABLE may96c.StudentInfo (\n",
+    "    StudentID INT NOT NULL,\n",
+    "    Addresss VARCHAR(100) NOT NULL,\n",
+    "    Phonenumber INT NOT NULL, \n",
+    "    DateofBirth DATE,\n",
+    "    PRIMARY KEY (StudentID),\n",
+    "    FOREIGN KEY (StudentID)\n",
+    "      REFERENCES Student(StudentID)\n",
+    "\n",
+    ");\n",
     "\n",
     "\n",
     "\n",
@@ -244,7 +274,19 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
+    "                      Table \"may96c.studentinfo\"\n",
+    "   Column    |          Type          | Collation | Nullable | Default\n",
+    "-------------+------------------------+-----------+----------+---------\n",
+    " studentid   | integer                |           | not null |\n",
+    " addresss    | character varying(100) |           | not null |\n",
+    " phonenumber | integer                |           | not null |\n",
+    " dateofbirth | date                   |           |          |\n",
+    "Indexes:\n",
+    "    \"studentinfo_pkey\" PRIMARY KEY, btree (studentid)\n",
+    "Foreign-key constraints:\n",
+    "    \"studentinfo_studentid_fkey\" FOREIGN KEY (studentid) REFERENCES student(studentid)\n",
     "\n",
+    "dsa_student=>\n",
     "\n",
     "\n"
    ]
