completed module 2 exercises

--- a/module2/exercises/CreateAndLoadSurveyDB.ipynb
+++ b/module2/exercises/CreateAndLoadSurveyDB.ipynb
@@ -50,7 +50,50 @@
     "#################################################\n",
     "\n",
     "\n",
-    "\n",
+    "dsa_student=> \\i survey.db.sql\n",
+    "BEGIN\n",
+    "CREATE TABLE\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "CREATE TABLE\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "CREATE TABLE\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "CREATE TABLE\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "INSERT 0 1\n",
+    "COMMIT\n",
     "\n"
    ]
   },
@@ -69,6 +112,40 @@
     "## Paste output from Task #4 Below this comment ## \n",
     "#################################################\n",
     "\n",
+    "dsa_student=> \\d Person\n",
+    "              Table \"may96c.person\"\n",
+    "  Column  | Type | Collation | Nullable | Default\n",
+    "----------+------+-----------+----------+---------\n",
+    " id       | text |           |          |\n",
+    " personal | text |           |          |\n",
+    " family   | text |           |          |\n",
+    "\n",
+    "dsa_student=> \\d Site\n",
+    "              Table \"may96c.site\"\n",
+    " Column | Type | Collation | Nullable | Default\n",
+    "--------+------+-----------+----------+---------\n",
+    " name   | text |           |          |\n",
+    " lat    | real |           |          |\n",
+    " long   | real |           |          |\n",
+    "\n",
+    "dsa_student=> \\d Visited\n",
+    "             Table \"may96c.visited\"\n",
+    " Column | Type | Collation | Nullable | Default\n",
+    "--------+------+-----------+----------+---------\n",
+    " id     | text |           |          |\n",
+    " site   | text |           |          |\n",
+    " dated  | text |           |          |\n",
+    "\n",
+    "dsa_student=> \\d Survey\n",
+    "               Table \"may96c.survey\"\n",
+    " Column  |  Type   | Collation | Nullable | Default\n",
+    "---------+---------+-----------+----------+---------\n",
+    " taken   | integer |           |          |\n",
+    " person  | text    |           |          |\n",
+    " quant   | text    |           |          |\n",
+    " reading | real    |           |          |\n",
+    "\n",
+    "dsa_student=>\n",
     "\n",
     "\n",
     "\n"
@@ -92,7 +169,7 @@
     "#################################################\n",
     "\n",
     "\n",
-    "\n"
+    "dsa_student=> SELECT * FROM may96c.Person WHERE id LIKE '%a%' ;\n"
    ]
   },
   {
@@ -102,7 +179,11 @@
     "#################################################\n",
     "## Paste Result for Task #5 Below this comment ## \n",
     "#################################################\n",
-    "\n",
+    "    id    | personal |  family\n",
+    "----------+----------+----------\n",
+    " lake     | Anderson | Lake\n",
+    " danforth | Frank    | Danforth\n",
+    "(2 rows)\n",
     "\n",
     "\n",
     "\n"
