--- a/module2/exercises/DB_Design.ipynb
+++ b/module2/exercises/DB_Design.ipynb
@@ -86,7 +86,7 @@
     "collapsed": true
    },
    "source": [
-    " ![ERD MISSING]()"
+    " ![ERD MISSING](database_design_exercise.PNG)"
    ]
   },
   {
